# raytracer-challenge

./: .gitignore  LICENSE  Makefile  README.md  tags
c/: .ycm_extra_conf.py  Makefile  tags
c/excercises/: analog.c  projectile.c
c/renders/: analog.ppm  projectile.ppm  shadow.ppm
c/src/: canvas.c  colors.c  matrix.c  matrix.h  ray.c  ray.h  sphere.c  tuples.h  utils.c
c/tests/: colors.c  matrix.c  utils.c
cpp/: CMakeLists.txt  Makefile
cpp/excercises/: projectile.cpp
cpp/include/: canvas.hpp  colors.hpp  matrix.hpp  ray.hpp  sphere.hpp  tuples.hpp
cpp/scripts/: build  configure-debug  configure-release  docs  run  test  tidy
cpp/src/: canvas.cpp  colors.cpp  matrix.cpp  ray.cpp  sphere.cpp  tuples.cpp  utils.cpp
cpp/tests/: canvas.cpp  colors.cpp  matrix.cpp  ray.cpp  sphere.cpp  tuples.cpp  utils.cpp
excercises/: analog.c  projectile  projectile.c  shadow.c
rust/: TODO.md
rust/src/: canvas.rs  color.rs  lib.rs  main.rs  matrix.rs  ray.rs  sphere.rs  tuple.rs
src/: canvas.c  canvas.h  colors.c  colors.h  matrix.c  matrix.h  ray.c  ray.h  sphere.c  sphere.h  tuples.c  tuples.h  utils.c  utils.h
tests/: canvas.c  colors.c  matrix.c  ray.c  sphere.c  tuples.c  tutils.c  tutils.h  utils.c
